--- a/src/components/newPost.module.css
+++ b/src/components/newPost.module.css
@@ -1,6 +1,6 @@
 .formContainer {
   min-height: 100vh;
-  background-color: rgba(99, 164, 255, 0.2);
+  /* background-color: rgba(99, 164, 255, 0.2); */
 }
 
 .formstyle {
