--- a/src/components/rootPage.module.css
+++ b/src/components/rootPage.module.css
@@ -2,7 +2,14 @@
   display: flex;
   justify-content: center;
 }
-
+.logOutStyle {
+  position: fixed;
+  left: 0;
+  margin: 10px;
+  cursor: pointer;
+  font-weight: bold;
+  color: #1976D2;
+}
 .navStyle {
   padding: 10px;
 }
@@ -18,7 +25,10 @@
   position: fixed;
   right: 0;
   margin: 10px;
-  text-decoration: none;
-  font-weight: bold;
   color: #1976D2;
+}
+.logInTextStyle {
+  color: #1976D2;
+  font-weight: bold;
+  text-decoration: none;
 }
